# cmake-vala-vscode

./: .bowerrc  .gitattributes  .gitignore  CMakeLists.1.txt  CMakeLists.txt  CMakeLists.txt.emcc  CMakeLists2.txt  bower.json  build - Copy.bat  build.bat  build.sh  component.json  emscripten.bat  init.sh  init2.sh  project.json  readme.md
.lib/utils/: bower.json
cmake/: ValaPrecompile.cmake
cmake/SDL2/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
cmake/vala/: ValaPrecompile.cmake
data/: CMakeLists.txt  resources.gresource.xml
src/: Config.vala  DarkMatter.vala  Factory.vala  Game.vala  alliance.1.vala  alliance.vala  components.vala  entity.vala  frodo.vala  hello-world.vala  main.vala  resources.c  shmupwarz.vala  system.vala  template.html
src/game/: Entities.gs  Game.gs
src/systems/: AnimationSystem.vala  CollisionSystem.vala  DisplaySystem.vala  ExpireSystem.vala  InputSystem.vala  PhysicsSystem.vala  RemoveSystem.vala  ScoreSystem.vala  SoundSystem.vala  SpawnSystem.vala
src/vapis/: emscripten.vapi  sdl2.vapi
src/vapisz/: gio-2.0.vapiz  glib-2.0.vapiz
web/: alliance.html  alliance.js  alliance.wasm  index.data  index.html  index.js  index.wasm  test.bat
